# medical_qa_system

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py  schemas.py
backend/app/services/: __init__.py  cache.py  clinicaltrials.py  llm_service.py  openai_service.py  pubmed.py  qa.py  rerank.py  text_utils.py  trace_builder.py
backend/tests/: conftest.py  test_api_integration.py  test_clinicaltrials.py  test_llm_service.py  test_pubmed.py  test_rerank_and_validation.py  test_trace_builder.py
backend/tests/fixtures/: clinicaltrials_response.json  pubmed_fetch.xml  pubmed_summary.json
deliverables/: clinical_qa_interviewer_qa.md  clinical_qa_ppt_plus_demo_runbook.md  clinical_qa_request_flow.md  clinical_qa_slides_outline.md  clinical_qa_video_script_en_zh.md
deliverables/clinical_qa_mvp_presentation/: README.md  clinical_qa_mvp_presentation.js  clinical_qa_mvp_presentation.pptx  package-lock.json  package.json
deliverables/clinical_qa_ppt_plus_demo_presentation/: README.md  clinical_qa_ppt_plus_demo_presentation.js  clinical_qa_ppt_plus_demo_presentation.pptx  package-lock.json  package.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
local_llm/: README.md  pyproject.toml  server.py
