[project]
name = "clinical-qa-backend"
version = "0.1.0"
description = "FastAPI backend for a clinical QA MVP grounded in ClinicalTrials.gov and PubMed."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "openai>=1.75.0",
  "orjson>=3.10.0",
  "pydantic-settings>=2.6.0",
  "python-dateutil>=2.9.0",
  "sqlmodel>=0.0.22",
  "tenacity>=9.0.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

