[project]
name = "local-llm-server"
version = "0.1.0"
description = "OpenAI-compatible local LLM server for corp_chatbot-style integrations."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "safetensors>=0.5.0",
  "sentencepiece>=0.2.0",
  "socksio>=1.0.0",
  "torch>=2.4.0",
  "transformers>=4.46.0",
  "uvicorn[standard]>=0.30.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
